2004-11-29  Matthias Clasen  <mclasen@redhat.com>

	* Makefile.am (gdk-pixbuf-alias.h): Use the perl found by 
	configure.  (#149826, Morten Welinder)

Sun Nov 28 12:11:21 2004  Manish Singh  <yosh@gimp.org>

	* makegdkpixbufalias.pl: Typo fix, so attributes are really
	propagated.

2004-11-28  Matthias Clasen  <mclasen@redhat.com>

	* gdk-pixbuf.symbols: 
	* Makefile.am: Mark get_type() functions generated by glib-mkenums 
	as const.

Thu Nov 25 14:21:37 2004  Manish Singh  <yosh@gi,p.org>

	* abicheck.sh: filter out G_GNUC stuff when doing the compare.

2004-11-23  Matthias Clasen  <mclasen@redhat.com>

	* gdk-pixbuf-core.h: Don't mark gdk_pixbuf_error_quark() as const,
	to be consistent with all the other error_quark functions. 
	(technically they are const, but since these are called only
	in error paths, giving the compiler better optimization 
	opportunities doesn't matter much)

	* gdk-pixbuf.symbols: Add attribute annotations.
	* makegdkpixbufalias.pl: Keep attribute annotations, but strip PRIVATE.
	* Makefile.am (gdk_pixbuf.def): Strip attribute annotations, but keep 
	PRIVATE.

Mon Nov 15 18:58:22 2004  Manish Singh  <yosh@gimp.org>

	* gdk-pixbuf-private.h: _gdk_pixbuf_lock now returns a gboolean.

	* abicheck.sh: don't hardcode lengths for cut, instead split on
	the third field.

2004-11-15  Matthias Clasen  <mclasen@redhat.com>

	* gdk-pixbuf-animation.c: 
	* gdk-pixbuf-loader.c: 
	* gdk-pixbuf-io.c: Be extra careful when locking and handle
	the case that the module may initialize the thread system.

	* gdk-pixbuf-io.[hc] (_gdk_pixbuf_lock): Return whether the
	lock was actually taken.

	* queryloaders.c (query_module): Set vtable->module before
	calling fill_vtable(), since gdk-pixbuf-io.c does does the
	same and modules may rely on it.  (#158177, Dan Winship)

2004-11-12  Matthias Clasen  <mclasen@redhat.com>

	* gdk-pixbuf-io.c (gdk_pixbuf_io_init): Don't use 
	_gdk_pixbuf_load_module_unlocked() in the !USE_GMODULE case.

	* === Released 2.5.5 ===
	